--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <section>
             <div>
-                <h1 class="titulos">Sobre nós</h1>
+                <h2 class="titulos">Sobre nós</h2>
                 <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                     ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -39,7 +39,7 @@
             </div>
         </section>
 
-        <seciton class="baber 2">
+        <seciton class="baner-2">
             <div>
                 <img src="assets/header/baner-2.png" alt="Dois homens olhando projeto">
                 <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -52,13 +52,17 @@
             <div>
 
                 <div>
-                    <img src="assets/header/dado.svg" alt="dado">
+                    <button>
+                        <img src="assets/header/dado.svg" alt="dado">
+                    </button>
                     <h2 class="titulo-2">Consultoria de arquitetura e decoração</h2>
                     <p class="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 <div>
-                    <img src="assets/header/engrenagem.svg" alt="engrenagem" alt="desenho de uma engrenagem">
+                    <button>
+                        <img src="assets/header/engrenagem.svg" alt="engrenagem" alt="desenho de uma engrenagem">
+                    </button>
                     <h2>Serviço Arquiteto</h2>
                     <p class="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua.</p>
@@ -69,7 +73,7 @@
         <section class="baner-3">
 
             <div>
-                <h1 class="titulos">Como trabalhamos</h1>
+                <h2 class="titulos">Como trabalhamos</h2>
                 <img src="assets/header/baner-3.png" alt=" pessoas trabalhando">
                 <h2 class="titulo-2">Realizamos uma consulta</h2>
                 <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -130,7 +134,7 @@
 
         <section class="servicos">
             <div>
-                <h1 class="titulos">Serviços</h1>
+                <h2 class="titulos">Serviços</h2>
                 <div>
                     <img src="assets/header/baner-1.1.png" alt="homem trabalhando">
                     <h3 class="titulo-3">Lorem ipsum</h3>
@@ -176,22 +180,27 @@
         </section>
     </main>
     <footer>
-        <h1>Envie sua aplicação</h1>
+        <h2>Envie sua aplicação</h2>
         <form>
-            <select>
-                <div>
-                    <input type="text" placeholder="Nome*">
-                    <input type="password" placeholder="Cidade">
-                    <input type="date" placeholder="18.10.2021">
 
-                    <input type="text" placeholder="Email*">
-                    <input type="text" placeholder="Mensagem">
+            <section>
+
                 </div>
+
+                <input type="text" placeholder="Nome*">
+                <input type="password" placeholder="Cidade">
+                <input type="date" placeholder="18.10.2021">
+
+                <input type="text" placeholder="Email*">
+                <input type="text" placeholder="Mensagem">
+
                 <button>Concluir</button>
                 <input type="checkbox" id="Concordo com a Política de privacidade."
                     value="Concordo com a Política de privacidade.">
                 <label>Concordo com a Política de privacidade.</label>
-            </select>
+                </div>
+            </section>
+
             <p class="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                 laboris nisi ut aliquip ex ea commodo consequat.
