--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <img src="assets/header/dado.svg" alt="dado">
                     
                     <h2 class="titulo-2">Consultoria de arquitetura e decoração</h2>
-                    <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    <p class="paragrafos-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 <div class="dado">
@@ -71,7 +71,7 @@
                         <img src="assets/header/engrenagem.svg" alt="engrenagem" alt="desenho de uma engrenagem">
                     
                     <h2  class="titulo-2">Serviço Arquiteto</h2>
-                    <p class="paragrafos">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    <p class="paragrafos-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua.</p>
                 </div>
             </div>
